--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,6 +8,17 @@
   <%=h @group.color %>
 </p>
 
+<p>
+  <b>People:</b>
+  
+  <ul>
+    <% @group.people.each do |person| %>
+      <li><%= link_to person.name, person %></li>
+    <% end %>
+  </ul>
+</p>
+
+
 
 <%= link_to 'Edit', edit_group_path(@group) %> |
 <%= link_to 'Back', groups_path %>
