edited forms to have new fields

--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -32,6 +32,19 @@
     <%= f.text_field :city %>
   </p>
   <p>
+    <%= f.label :longitude %><br />
+    <%= f.text_field :longitude %>
+  </p>
+  <p>
+    <%= f.label :latitude %><br />
+    <%= f.text_field :latitude %>
+  </p>
+  <p>
+    <%= f.label :image_url %><br />
+    <%= f.text_field :image_url %>
+  </p>
+  
+  <p>
     <%= f.submit 'Update' %>
   </p>
 <% end %>
