Added some links between people and groups

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,12 +4,14 @@
   <tr>
     <th>Name</th>
     <th>Color</th>
+    <th>People</th>
   </tr>
 
 <% @groups.each do |group| %>
   <tr>
     <td><%=h group.name %></td>
     <td><%=h group.color %></td>
+    <td><%=group.people.count %></td>
     <td><%= link_to 'Show', group %></td>
     <td><%= link_to 'Edit', edit_group_path(group) %></td>
     <td><%= link_to 'Destroy', group, :confirm => 'Are you sure?', :method => :delete %></td>
